--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="movie-container">
       <label for=""> Pick a movie</label>
-      <select name="" id="movie" onchange="onMovieChange(this.value)">
-        <option value="10">Avengers: Endgame (10$)</option>
+      <select name="" id="movie">
+        <option value="10" selected>Avengers: Endgame (10$)</option>
         <option value="12">Joker (12$)</option>
         <option value="8">Toy Story(8$)</option>
         <option value="9">The Lion King(9$)</option>
